10.2.1 fix(mapjs): Update css with new classes:
- `mapjs/public/mapjs-default-styles.css`: Update to reflect new element
 classes etc. Fixes buttons being hidden behind map container.

--- a/mapjs/public/mapjs-default-styles.css
+++ b/mapjs/public/mapjs-default-styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 /* Default visibility - widget will show when a link is selected. */
-.linkEditWidget {
+.toolbar-mapjs-edit-links {
   display: none;
 }
 
@@ -48,7 +48,7 @@ body {
   background-color: #e5e5e5;
 }
 
-.mapjs_control {
+.menubar-mapjs {
   position: sticky;
   z-index: 10;
   min-height: 66px !important;
@@ -56,7 +56,7 @@ body {
   padding: 5px;
 }
 
-.container_argmapjs {
+.mapjs-container {
   /* overflow from theme.css: */
   /* Testing with visible instead for convenience: */
   overflow: auto;
